tests/errors/port-mismatch.fil
comp main<G:1>(go: interface[G], in: [G, G+1] 32) -> (out: [G, G+1] 16) {
    out = in;
}